fix: autocomplete off, z-index dropdowns, input error margin

--- a/packages/css/src/formElements/autocomplete/autocomplete.css
+++ b/packages/css/src/formElements/autocomplete/autocomplete.css
@@ -134,6 +134,7 @@
   position: absolute;
   max-height: 0;
   overflow: hidden;
+  z-index: -1;
   opacity: 0;
   transition: max-height 0.5s ease-in-out;
   width: calc(100% - 4px); /* Full width minus border-width */
