--- a/packages/css/src/formElements/input/input.css
+++ b/packages/css/src/formElements/input/input.css
@@ -137,6 +137,7 @@
 .md-input__error-icon {
   width: 20px;
   height: 20px;
+  margin-left: 0.5em;
   color: var(--mdErrorColor);
 }
 
